# writing-tools

./: .dockerignore  .gitignore  BUGSINK_SETUP.md  CLAUDE.md  CODEBASE_AUDIT_REPORT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Jenkinsfile  LICENSE  README.md  STUDY.md  VISUAL_REGRESSION.md  consistency_metaprompt.md  consistency_prompt.md  convert_ms.py  convert_vtt.py  diarization.ipynb  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-staging.yml  docker-compose.yml  output.json  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh  server.py  test_auth.sh  transcribe.py
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: copilot-instructions.md
.husky/: pre-push
add-in/: .dockerignore  Dockerfile  manifest-dev.xml  manifest-prod.xml  manifest.xml  package-lock.json  package.json  tsconfig.json  webpack.config.js
backend/: .dockerignore  .funcignore  .gitignore  CLAUDE.md  Dockerfile  README.md  custom_llm.py  custom_llm_inference.py  demo_custom_generation.py  eval_prompts.py  function_app.py  get_env.py  gunicorn.conf.py  metaprompt_examples.md  metaprompt_proposal_advice.md  nlp.py  nlp_anthropic.py  nlp_explore.py  nlp_scraps.py  nlp_test.py  nlp_tests.py  package-lock.json  package.json  posthog_client.py  regenerator.py  requests.db  requirements.txt  ruff.toml  server.py  test.py  test_auth_manual.py  test_generation.sh  test_integration.py  test_jwt.py  test_jwt_standalone.py  test_llm_inference.py  test_nlp.py  tsconfig.json  update
backlog/: config.yml
custom-editor/: .eslintrc.json  .gitignore  README.md  highlights.css  highlights.html  highlights.js  package-lock.json  package.json  requirements.txt  tsconfig.json  webpack.config.js
docs/: auth-plan.md  js-backend-plan.md  my-words-interaction-design.md  my-words-voice-native-research.md  single-container-consolidation.md
experiment/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  INCOMING-survey-questions.txt  README.md  consent-form.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  prolificURLs-study1-amount.csv  prototype.html  regenerate-walkthrough.sh  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/: .eslintrc.json  .gitignore  .prettierrc  CLAUDE.md  Dockerfile  TESTING.md  babel.config.json  biome.json  commands.html  components.json  editor.html  eslint.config.js  eslint.config.mjs  index.html  jest.config.cjs  jest.config.js  logs.html  manifest.xml  mywords-demo.html  next.config.ts  nginx.conf  (+20 more)
(+607 files in other folders)
