[project]
name = "writing-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11" 
dependencies = [
    "fastapi>=0.115.0",
    "gunicorn>=23.0.0",
    "openai>=1.108",
    "python-dotenv>=1.0.1",
    "sse-starlette>=2.1.3",
    "tenacity>=9.0.0",
    "uvicorn>=0.30.6",
    "pytest>=8.3.4",
    "aiohttp>=3.11.14",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipython>=8.32.0",
    "ipywidgets>=8.1.7",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "pandas>=2.3.2",
    "ruff>=0.13.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tqdm>=4.66.5",
]
